# rust_in_cpp

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  hello.cpp
cpp/: CMakeLists.txt  hello.cpp
include/: rust_interface.h  test.h
src/: lib.rs  main.rs
