[package]
name = "rust_in_cpp"
version = "0.1.0"
authors = ["Odin Aleksander Severinsen <odin.sev@gmail.com>"]
edition = "2018"

[build-dependencies]
cxx-build = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
libc = "0.2"
ndarray = "0.15"
cxx = "1.0"
argmax = { git = "https://github.com/odinase/argmax" }
